--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <%- include('../includes/navigation.ejs') %>
+   <%- include('../includes/navigation.ejs') %>
 
     <main>
         <form class="product-form" action="/admin/add-product" method="POST">
@@ -12,20 +12,17 @@
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
             </div>
-
             <div class="form-control">
                 <label for="imageUrl">Image URL</label>
                 <input type="text" name="imageUrl" id="imageUrl">
             </div>
-
             <div class="form-control">
                 <label for="price">Price</label>
                 <input type="number" name="price" id="price" step="0.01">
             </div>
-
             <div class="form-control">
                 <label for="description">Description</label>
-                <textarea name="description" id="description" rows="5" placeholder="Product description"></textarea>
+                <textarea name="description" id="description" rows="5"></textarea>
             </div>
 
             <button class="btn" type="submit">Add Product</button>
