--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -17,6 +17,14 @@
                         </li>
                     <% }); %>
                 </ul>
+
+                <hr>
+                <div class="centered">
+                    <form action="/create-order" method="post">
+                        <button class="btn" type="submit">Order Now!</button>
+                    </form>
+                </div>
+                
             <% } else { %>
                 <h1>No products in Cart!!!</h1>
             <% } %>
